--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -16,9 +16,9 @@
           <!--change to offline or busy as needed-->
         </div>
         <div class="nav-profile-text">
-          <span class="font-weight-bold mb-2">{{ userDetails.fullName }}</span>
+          <span class="font-weight-bold mb-2">{{ userDetails?.fullName }}</span>
           <span class="text-secondary text-small">{{
-            getAccountType(userDetails.roles[0])
+            getAccountType(userDetails?.roles[0])
           }}</span>
         </div>
         <i class="mdi mdi-bookmark-check text-success nav-profile-badge"></i>
