--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -83,7 +83,7 @@
             Activity Log
           </a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="javascript:;">
+          <a class="dropdown-item" href="javascript:;" (click)="logout()">
             <i class="mdi mdi-logout mr-2 text-primary"></i>
             Signout
           </a>
