--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -5,8 +5,8 @@
         <div class="nav-profile-image">
           <img
             [src]="
-              userDetails?.avatar?.length > 0
-                ? _common.showImage(userDetails?.avatar)
+              authData?.userDetails.avatar?.length > 0
+                ? _common.showImage(authData?.userDetails.avatar)
                 : 'assets/images/faces/face1.jpg'
             "
             onerror="this.src='assets/images/faces/face1.jpg'"
@@ -16,9 +16,11 @@
           <!--change to offline or busy as needed-->
         </div>
         <div class="nav-profile-text">
-          <span class="font-weight-bold mb-2">{{ userDetails?.fullName }}</span>
+          <span class="font-weight-bold mb-2">{{
+            authData?.userDetails.name
+          }}</span>
           <span class="text-secondary text-small">{{
-            getAccountType(userDetails?.roles[0])
+            authData?.userDetails.roles[0]
           }}</span>
         </div>
         <i class="mdi mdi-bookmark-check text-success nav-profile-badge"></i>
