--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -87,7 +87,7 @@
           </a>
         </div>
       </li>
-      <li class="nav-item dropdown" ngbDropdown>
+      <!-- <li class="nav-item dropdown" ngbDropdown>
         <a
           class="nav-link count-indicator dropdown-toggle"
           id="messageDropdown"
@@ -177,7 +177,7 @@
           <div class="dropdown-divider"></div>
           <h6 class="p-3 mb-0 text-center">4 new messages</h6>
         </div>
-      </li>
+      </li> -->
       <li class="nav-item dropdown" ngbDropdown>
         <a
           class="nav-link count-indicator dropdown-toggle"
