--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -44,7 +44,8 @@
         routerLinkActive="active"
         #userPage="routerLinkActive"
       >
-        Users
+        <span class="menu-title">Users</span>
+        <i class="mdi mdi-account-multiple menu-icon"></i>
       </a>
     </li>
     <li class="nav-item">
@@ -54,7 +55,8 @@
         routerLinkActive="active"
         #userPage="routerLinkActive"
       >
-        Cylinders
+        <span class="menu-title">Cylinders</span>
+        <i class="mdi mdi-gas-cylinder menu-icon"></i>
       </a>
     </li>
     <li
@@ -83,16 +85,6 @@
               #adverts="routerLinkActive"
             >
               Orders List
-            </a>
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              routerLink="companies/companies-list"
-              routerLinkActive="active"
-              #companies_list="routerLinkActive"
-            >
-              Pending Orders
             </a>
           </li>
           <li class="nav-item">
