--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -229,7 +229,7 @@
       ></ngb-datepicker>
     </div>
   </div> -->
-  <div class="col-md-6 grid-margin stretch-card">
+  <!-- <div class="col-md-6 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">Most Recent Advert</h4>
@@ -413,7 +413,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 <div class="row">
   <!-- <div class="col-md-5 stretch-card">
