--- a/src/app/user-pages/login/login.component.html
+++ b/src/app/user-pages/login/login.component.html
@@ -48,7 +48,11 @@
           </div>
           <div class="mt-3">
             <button
-              class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn"
+              class="
+                btn btn-block btn-primary btn-lg
+                font-weight-medium
+                auth-form-btn
+              "
               [disabled]="!loginForm.valid"
             >
               SIGN IN
@@ -56,7 +60,7 @@
           </div>
           <br />
           <div class="alert alert-danger" role="alert" *ngIf="error">
-            Error: {{ error }}
+            Error: {{ error?.message || "Error Logging in" }}
           </div>
         </form>
       </div>
