--- a/src/app/cylinders/cylinders.component.html
+++ b/src/app/cylinders/cylinders.component.html
@@ -91,6 +91,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="form-group">
+              <label for="size">Cylinder Size</label>
               <input
                 type="number"
                 formControlName="size"
@@ -103,6 +104,7 @@
           </div>
           <div class="col-lg-6">
             <div class="form-group">
+              <label for="price">Cylinder Price</label>
               <input
                 type="number"
                 formControlName="price"
@@ -116,6 +118,7 @@
 
         <div class="form-group">
           <div class="form-group">
+            <label for="name">Cylinder Visible Name</label>
             <input
               type="text"
               formControlName="name"
@@ -126,6 +129,7 @@
           </div>
         </div>
         <div class="form-group">
+          <label for="description">Cylinder Description (optional)</label>
           <textarea
             type="text"
             cols="3"
