--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -111,6 +111,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="form-group">
+              <label for="fullName">User Full Name</label>
               <input
                 type="text"
                 formControlName="fullName"
@@ -123,6 +124,7 @@
           </div>
           <div class="col-lg-6">
             <div class="form-group">
+              <label for="email">User Email Address</label>
               <input
                 type="email"
                 formControlName="email"
@@ -137,6 +139,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="form-group">
+              <label for="userType">User Role</label>
               <select
                 class="form-control form-control-lg"
                 id="userType"
@@ -155,6 +158,7 @@
           </div>
           <div class="col-lg-6">
             <div class="form-group">
+              <label for="password">User Password</label>
               <input
                 type="password"
                 formControlName="password"
@@ -168,6 +172,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="form-group">
+              <label for="phoneNumber">User Phone Number</label>
               <input
                 type="text"
                 formControlName="phoneNumber"
@@ -180,6 +185,7 @@
           </div>
           <div class="col-lg-6">
             <div class="form-group">
+              <label for="address">User Address</label>
               <input
                 type="text"
                 formControlName="address"
@@ -192,8 +198,9 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6" *ngIf="userType === 'Delivery Agent'">
             <div class="form-group">
+              <label for="vehicleNo">Delivery Agent's Vehicle No</label>
               <input
                 type="text"
                 formControlName="vehicleNo"
@@ -204,8 +211,9 @@
               />
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6" *ngIf="userType === 'Vendor'">
             <div class="form-group">
+              <label for="pricePackage">Vendor's Price Package(₦)</label>
               <input
                 type="number"
                 formControlName="pricePackage"
@@ -217,9 +225,10 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row" *ngIf="userType === 'Vendor'">
           <div class="col-lg-6">
             <div class="form-group">
+              <label for="pricePackage">Vendor's Location Latitude</label>
               <input
                 type="number"
                 formControlName="latitude"
@@ -232,6 +241,7 @@
           </div>
           <div class="col-lg-6">
             <div class="form-group">
+              <label for="pricePackage">Vendor's Location Longitude</label>
               <input
                 type="number"
                 formControlName="longitude"
@@ -244,6 +254,7 @@
           </div>
         </div>
         <div class="form-group">
+          <label for="pricePackage">User's Referral ID</label>
           <input
             type="text"
             formControlName="referralId"
