--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -51,7 +51,7 @@
     <li class="nav-item">
       <a
         class="nav-link"
-        routerLink="cylinders"
+        routerLink="cylinders/cylinders-list"
         routerLinkActive="active"
         #userPage="routerLinkActive"
       >
